@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 15
+Release: 16
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -494,6 +494,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Oct 29 2004 Jeff Johnson <jbj@redhat.com> rpm-4.2.3-16
+- python: fix RPMPROB_BADRELOCATE segfault return in ts.check (#137116).
+
 * Fri Oct 22 2004 Jeff Johnson <jbj@redhat.com> rpm-4.3.2-15
 - selinux: set "ldconfig_t" for /sbin/ldconfig, else "rpm_script_t".
 
