@@ -31,6 +31,7 @@
 	- fix: don't set handler if SIG_IGN is already set (#134474).
 	- don't add time stamp to compressed man pages (#132526).
 	- selinux: set "ldconfig_t" for /sbin/ldconfig, else "rpm_script_t".
+	- python: fix RPMPROB_BADRELOCATE segfault return in ts.check (#137116).
 
 4.3 -> 4.3.1:
 	- fix: don't add leading space to %* argv expansion (#119059).
